<resources>
    <string name="app_name">Dungeon Domination</string>
    <string name="adventure_button">ADVENTURE</string>
    <string name="press_to_start">PRESS ANYWHERE</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="difficulty">difficulty</string>
    <string name="musicOn">musicOn</string>
    <string name="color">color</string>
    <string name="choose_difficulty">Difficulty</string>
    <string name="choose_color">Player Color</string>
    <string name="color_white">White</string>
    <string name="color_orange">Orange</string>
    <string name="color_purple">Purple</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="store">Store</string>
    <string name="coins">C</string>
    <string name="coins_key">coins</string>
    <string name="coin_balance">Coins: %1$s</string>
    <string name="weapon_upgrades">weaponUpgradesPurchased</string>
    <string name="hp">HP: </string>
    <string name="game_over_lost">Mission Failed</string>
    <string name="game_over_won">Adventure Complete</string>
    <string name="weapon_upgrade">Weapon Upgrade: +5 Damage</string>
    <string name="upgrade_1_cost">100</string>
    <string name="upgrade_2_cost">1000</string>
    <string name="upgrade_3_cost">5000</string>
    <string name="upgrade_purchased">SOLD</string>
    <string name="picture_desc">Image for the player\'s character</string>
    <string name="settings_button_desc">Button for settings activity</string>
    <string name="settings_back_button_desc">Button to return to menu activity</string>
    <string name="store_button_desc">Button for store activity</string>
    <string name="upgrade_1_desc">Upgrade icon</string>
    <string name="upgrade_2_desc">Upgrade icon</string>
    <string name="upgrade_3_desc">Upgrade icon</string>
</resources>
