<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreActivity">

    <Button
        android:id="@+id/upgrade_3_button"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:backgroundTint="#978F8F"
        android:text="@string/upgrade_3_cost"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />

    <ImageButton
        android:id="@+id/store_back_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="#978F8F"
        android:contentDescription="@string/settings_back_button_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        app:srcCompat="@drawable/go_back" />

    <TextView
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3.5"
        android:shadowDy="3.3"
        android:shadowRadius="1.6"
        android:text="@string/store"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/coin_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:shadowColor="#000000"
        android:shadowDx="2.0"
        android:shadowDy="2.0"
        android:shadowRadius="1.6"
        android:text="@string/coin_balance"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <ImageView
        android:id="@+id/upgrade1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/upgrade_1_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        app:srcCompat="@drawable/upgrade" />

    <ImageView
        android:id="@+id/upgrade2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/upgrade_2_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601"
        app:srcCompat="@drawable/upgrade" />

    <ImageView
        android:id="@+id/upgrade3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/upgrade_3_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.284"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844"
        app:srcCompat="@drawable/upgrade" />

    <TextView
        android:id="@+id/weapon_upgrade1"
        android:layout_width="180dp"
        android:layout_height="46dp"
        android:outlineProvider="none"
        android:shadowColor="#000000"
        android:shadowDx="2.0"
        android:shadowDy="2.0"
        android:shadowRadius="1.6"
        android:text="@string/weapon_upgrade"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <TextView
        android:id="@+id/weapon_upgrade3"
        android:layout_width="180dp"
        android:layout_height="46dp"
        android:outlineProvider="none"
        android:shadowColor="#000000"
        android:shadowDx="2.0"
        android:shadowDy="2.0"
        android:shadowRadius="1.6"
        android:text="@string/weapon_upgrade"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <TextView
        android:id="@+id/weapon_upgrade4"
        android:layout_width="180dp"
        android:layout_height="46dp"
        android:outlineProvider="none"
        android:shadowColor="#000000"
        android:shadowDx="2.0"
        android:shadowDy="2.0"
        android:shadowRadius="1.6"
        android:text="@string/weapon_upgrade"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <Button
        android:id="@+id/upgrade_1_button"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:backgroundTint="#978F8F"
        android:text="@string/upgrade_1_cost"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />

    <Button
        android:id="@+id/upgrade_2_button"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:backgroundTint="#978F8F"
        android:text="@string/upgrade_2_cost"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604" />

</androidx.constraintlayout.widget.ConstraintLayout>