<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3.5"
        android:shadowDy="3.3"
        android:shadowRadius="1.6"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3.5"
        android:shadowDy="3.3"
        android:shadowRadius="1.6"
        android:text="@string/medium"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="#BCBCBC"
        android:textColorLink="#535353"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <TextView
        android:id="@+id/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3.5"
        android:shadowDy="3.3"
        android:shadowRadius="1.6"
        android:text="@string/color_orange"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="#BCBCBC"
        android:textColorLink="#535353"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852" />

    <TextView
        android:id="@+id/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3.5"
        android:shadowDy="3.3"
        android:shadowRadius="1.6"
        android:text="@string/color_white"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="#BCBCBC"
        android:textColorLink="#535353"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852" />

    <TextView
        android:id="@+id/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3.5"
        android:shadowDy="3.3"
        android:shadowRadius="1.6"
        android:text="@string/hard"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="#BCBCBC"
        android:textColorLink="#535353"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618" />

    <TextView
        android:id="@+id/purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3.5"
        android:shadowDy="3.3"
        android:shadowRadius="1.6"
        android:text="@string/color_purple"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="#BCBCBC"
        android:textColorLink="#535353"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852" />

    <TextView
        android:id="@+id/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3.5"
        android:shadowDy="3.3"
        android:shadowRadius="1.6"
        android:text="@string/easy"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="#BCBCBC"
        android:textColorLink="#535353"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618" />

    <TextView
        android:id="@+id/select_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3.5"
        android:shadowDy="3.3"
        android:shadowRadius="1.6"
        android:text="@string/choose_color"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="#BCBCBC"
        android:textColorLink="#535353"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749" />

    <TextView
        android:id="@+id/select_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineProvider="none"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3.5"
        android:shadowDy="3.3"
        android:shadowRadius="1.6"
        android:text="@string/choose_difficulty"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="#BCBCBC"
        android:textColorLink="#535353"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:outlineProvider="none"
        android:shadowColor="#000000"
        android:shadowDx="3.5"
        android:shadowDy="3.3"
        android:shadowRadius="1.6"
        android:text="@string/music"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="#BCBCBC"
        android:textColorLink="#535353"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        app:layout_constraintVertical_bias="0.092" />

    <ImageButton
        android:id="@+id/settings_back_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="#978F8F"
        android:contentDescription="@string/settings_back_button_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        app:srcCompat="@drawable/go_back" />

</androidx.constraintlayout.widget.ConstraintLayout>